# edic

./: .gitignore  README.md  pyproject.toml
edic/: __init__.py
tests/: test_classes.py
