[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edic"
version = "0.0.1"
authors = [
    {name="Noah Fahlgren", email="nfahlgren@danforthcenter.org"},
]
description = "Extendable Image Data Classes"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/danforthcenter/edic"
